envoy-config.json
{"static_resources": {
  "listeners": [
    {
      "address": { "socket_address": { "address": "127.0.0.1", "port_value": 7777 } },
      "filter_chains": {
        "filters": [
          {
            "name": "envoy.http_connection_manager",
            "config": {
              "stat_prefix": "ingress_http",
              "http_filters": [{
                "name": "envoy.router",
                "config": {}
              }],
              "route_config": {
                "virtual_hosts": [
                  {
                    "name": "local_routes",
                    "domains": "*",
                    "routes": [
                      {
                        "route": {
                          "cluster": "common-upstream-1"
                        },
                        "match": {
                          "prefix": "/"
                        }
                      }
                    ]
                  }
                ]
              }
    }}]}}],
  "clusters":[
    {
      "name": "bdp-upstream-1",
      "type": "STRICT_DNS",
      "connect_timeout": "1s",
      "hosts": [
        { "socket_address": { "address": "127.0.0.1", "port_value": 9080 } }
      ]
    },
    {
      "name": "common-upstream-1",
      "type": "STRICT_DNS",
      "connect_timeout": "1s",
      "hosts": [
        { "socket_address": { "address": "127.0.0.1", "port_value": 9080 } }
      ]
    }
  ]
}}
